--- a/Vistas/Dicionario.html
+++ b/Vistas/Dicionario.html
@@ -20,11 +20,13 @@
 
 <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="Index.html"><i class="fas fa-home mr-2"></i> Página de inicio</a>
-    <a href="Vistas/Dicionario.html"><i class="fas fa-book mr-2"></i> Diccionario</a>
-    <a href="Vistas/Historial.html"><i class="fas fa-history mr-2"></i> Historial de traducciones</a>
-    <a href=""><i class="fas fa-envelope mr-2"></i> Página de contacto o soporte</a>
-    <a href="Vistas/Info.html"><i class="fas fa-info-circle mr-2"></i> Acerca de</a>
+    <a href="#"><i class="fas fa-home mr-2"></i> Página de inicio</a>
+    <a href="#"><i class="fas fa-book mr-2"></i> Diccionario</a>
+    <a href="#"><i class="fas fa-history mr-2"></i> Historial de traducciones</a>
+    <a href="#"><i class="fas fa-user-cog mr-2"></i> Configuración del perfil</a>
+    <a href="#"><i class="fas fa-envelope mr-2"></i> Página de contacto o soporte</a>
+    <a href="#"><i class="fas fa-info-circle mr-2"></i> Acerca de</a>
+    <a href="#"><i class="fas fa-handshake mr-2"></i> Aportes</a>
 </div>
 
 <div id="main" class="container">
