--- a/Vistas/Dicionario.html
+++ b/Vistas/Dicionario.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Imox</title>
+    <title>Imox Diccionario</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/yeti/bootstrap.min.css" integrity="sha384-mLBxp+1RMvmQmXOjBzRjqqr0dP9VHU2tb3FK6VB0fJN/AOu7/y+CAeYeWJZ4b3ii" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/Traductor.css">
+    <link rel="stylesheet" href="../assets/css/Traductor.css">
 
 </head>
 <body>
@@ -15,7 +15,7 @@
     <button class="navbar-toggler" type="button" onclick="openNav()">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <span class="navbar-brand">Imox Traductor</span>
+    <span class="navbar-brand">Imox Diccionario</span>
 </header>
 
 <div id="mySidebar" class="sidebar">
@@ -30,26 +30,20 @@
 </div>
 
 <div id="main" class="container">
-    <h2 class="mt-4">Traductor Imox</h2>
+    <h2 class="mt-4">Diccionario Imox</h2>
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text">Español</span>
+                    <span class="input-group-text">Buscar palabra</span>
                 </div>
-                <textarea id="textoEspañol" class="form-control" aria-label="With textarea" placeholder="Ingresa un texto en español" oninput="expandTextarea(this)"></textarea>
+                <input id="palabraBuscada" type="text" class="form-control" aria-label="Buscar palabra" placeholder="Escribe una palabra en español o q'eqchi'">
             </div>
         </div>
-        <div class="col-md-6">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Q'eqchi'</span>
-                </div>
-                <textarea id="textoQeqchi" class="form-control" aria-label="With textarea" placeholder="Traducción en q'eqchi'" readonly></textarea>
+        <div class="col-md-12">
+            <div id="resultadoBusqueda" class="alert alert-info" role="alert" style="display: none;">
+                Definición de la palabra buscada...
             </div>
-        </div>
-        <div class="col-md-12 text-center"> <!-- Agregamos una columna para el botón de traducción -->
-            <button class="boton-traducir" onclick="traducir()">Traducir</button> <!-- Botón de traducción -->
         </div>
     </div>
 </div>
@@ -69,15 +63,6 @@ function openNav() {
 function closeNav() {
     document.getElementById("mySidebar").style.width = "0";
     document.getElementById("main").style.marginLeft = "0";
-}
-
-function expandTextarea(textarea) {
-    textarea.style.height = 'auto';
-    textarea.style.height = (textarea.scrollHeight + 10) + 'px'; // Ajusta la altura del área de texto según el contenido
-}
-
-function traducir() {
-    // Aquí puedes agregar tu función para realizar la traducción
 }
 </script>
 
