--- a/Vistas/Historial.html
+++ b/Vistas/Historial.html
@@ -30,31 +30,26 @@
 </div>
 
 <div id="main" class="container">
-    <h2 class="mt-4">Diccionario Imox</h2>
-    <div class="row justify-content-center">
-        <div class="col-md-12">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Buscar palabra</span>
-                </div>
-                <input id="palabraBuscada" type="text" class="form-control" aria-label="Buscar palabra" placeholder="Escribe una palabra en español o q'eqchi'">
-            </div>
-        </div>
-        <div class="col-md-12">
-            <div id="resultadoBusqueda" class="alert alert-info" role="alert" style="display: none;">
-                Definición de la palabra buscada...
-            </div>
-        </div>
-    </div>
-
     <h2 class="mt-4">Historial de Traducciones</h2>
-    <div class="row justify-content-center">
-        <div class="col-md-12">
-            <ul id="historial" class="list-group">
-                <!-- Aquí se mostrará el historial de traducciones -->
-            </ul>
-        </div>
+<div class="row justify-content-center">
+    <div class="col-md-12">
+        <ul id="historial" class="list-group">
+            <!-- Aquí se mostrará el historial de traducciones -->
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Traducción 1
+                <button class="btn btn-danger btn-sm" onclick="eliminarTraduccion(this)">Eliminar</button>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Traducción 2
+                <button class="btn btn-danger btn-sm" onclick="eliminarTraduccion(this)">Eliminar</button>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Traducción 3
+                <button class="btn btn-danger btn-sm" onclick="eliminarTraduccion(this)">Eliminar</button>
+            </li>
+        </ul>
     </div>
+</div>
 </div>
 
 <footer class="footer mt-5">
